Add PostgreSQL database integration with Prisma and GCP support
- Install Prisma ORM and Google Cloud Secret Manager SDK
- Create Prisma schema with ChatSession model
- Set up database configuration with Cloud SQL support
- Replace in-memory storage with PostgreSQL persistence
- Add Google Secrets Manager service for production
- Implement database health checks and lifecycle management
- Run initial database migration
- Update environment configuration and documentation
- Add comprehensive GCP deployment guide

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,19 @@ NODE_ENV=development
 # CORS - Frontend URL
 FRONTEND_URL=http://localhost:5173
 
-# Database (add when ready)
-# DATABASE_URL=your_database_connection_string
+# Database Configuration
+# Local Development: Use direct PostgreSQL connection
+# Production: Will be retrieved from Google Secret Manager
+DATABASE_URL=postgresql://postgres:jcwZ4aBSbCf5gv7ozYvf@localhost:5432/tech_spec_gen
 
-# Optional: Storage configuration
-# STORAGE_TYPE=memory
-# DATA_DIR=./data
+# Google Cloud Platform Configuration
+# Required for both local development and production
+GCP_PROJECT_ID=your-gcp-project-id
+
+# Local Development Only: Path to service account key file
+# In production, Workload Identity handles authentication automatically
+GOOGLE_APPLICATION_CREDENTIALS=./keys/service-account.json
+
+# Production Only: Cloud SQL instance connection name
+# Format: project:region:instance-name
+# CLOUD_SQL_CONNECTION_NAME=your-project:us-central1:tech-spec-gen-db
