--- a/package.json
+++ b/package.json
@@ -10,23 +10,30 @@
     "start": "node dist/index.js",
     "type-check": "tsc --noEmit"
   },
-  "keywords": ["express", "typescript", "api", "chat"],
+  "keywords": [
+    "express",
+    "typescript",
+    "api",
+    "chat"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@google-cloud/secret-manager": "^6.1.1",
+    "@prisma/client": "^6.18.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
-    "tsx": "^4.7.0"
+    "prisma": "^6.18.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0"
   }
 }
-
