Integrate structured logging with @asp-utilities/tooling-node-logger
Logging Infrastructure:
- Install @asp-utilities/tooling-node-logger@^1.1.0 (Pino wrapper)
- Install pino-pretty for human-readable dev logs
- Configure .npmrc for GitHub Package Registry access
- Create src/config/logger.ts with centralized logger setup
- Update package.json dev script to pipe through pino-pretty

Code Changes:
- Replace ALL console.log/error/warn with structured logger
- Add context objects for searchable metadata
- Use appropriate log levels (info, warn, error, fatal, debug)
- Fix unused parameter TypeScript warnings (_req, _res, _next)

Files Updated:
- src/index.ts - Server startup and shutdown logging
- src/config/database.ts - Database connection logging
- src/services/storage.service.ts - CRUD operation logging
- src/services/secrets.service.ts - Secret retrieval logging
- src/middleware/index.ts - Error and request logging
- src/controllers/chat.controller.ts - API endpoint logging
- src/config/swagger.ts - Swagger export logging

Configuration:
- Update .env.example with SERVICE_NAME and LOG_LEVEL
- Add .npmrc to .gitignore (contains PAT)
- Service name: tech-spec-generator-api
- Log level: debug (dev), info (prod)

Benefits:
- Structured JSON logs for cloud platforms (GCP, AWS, Azure)
- Searchable context fields for debugging
- Consistent log format across all services
- High performance with Pino
- Ready for production log aggregation

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,12 @@ NODE_ENV=development
 # CORS - Frontend URL
 FRONTEND_URL=http://localhost:5173
 
+# Logging Configuration
+# Service name for structured logging
+SERVICE_NAME=tech-spec-generator-api
+# Log level (trace, debug, info, warn, error, fatal)
+LOG_LEVEL=debug
+
 # Database Configuration
 # Local Development: Use direct PostgreSQL connection
 # Production: Will be retrieved from Google Secret Manager
@@ -12,7 +18,7 @@ DATABASE_URL=postgresql://username:password@localhost:5432/your_database_name
 
 # Google Cloud Platform Configuration
 # Required for both local development and production
-GCP_PROJECT_ID=your-gcp-project-id
+GCP_PROJECT_ID=your-gcp-project-id-here
 
 # Local Development Only: Path to service account key file
 # In production, Workload Identity handles authentication automatically
